// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders RTL styling 1`] = `
<label
  className="c-chk__label c-chk__label--radio is-rtl "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;

exports[`Label renders checked styling if provided 1`] = `
<label
  checked={true}
  className="c-chk__label c-chk__label--radio is-checked "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;

exports[`Label renders default styling 1`] = `
<label
  className="c-chk__label c-chk__label--radio "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;

exports[`Label renders disabled styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--radio is-disabled "
  data-garden-id="radios.label"
  data-garden-version="version"
  disabled={true}
/>
`;

exports[`Label renders focused styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--radio is-focused "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;

exports[`Label renders hovered styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--radio is-hovered "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;

exports[`Label renders regular styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--radio c-chk__label--regular "
  data-garden-id="radios.label"
  data-garden-version="version"
/>
`;
